--- a/Interfaz/Web/index.html
+++ b/Interfaz/Web/index.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header> </header>
+    <header>
+
+        <nav>
+            <a href="nosotros.html">Inicio</a>
+            <a href="#">Sobre mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+        <div class="front_banner">
+            <section id="img_head">
+                <img src="img/hero.jpg">
+            </section>
+            <section id="head_text">   
+                <h2>Diseño y desarrollo web</h2>
+                <div id="location">
+                    <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="84" height="84" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffbf00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                        <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                      </svg></p>
+                    <p>Sevilla, España</p>
+                </div>
+                <a href="#campo1" class="button">Contactar</a>
+            </section>
+        </div>
+
+    </header>
    
-    <nav>
-        <a href="nosotros.html">Inicio</a>
-        <a href="#">Sobre mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
-    <div class="front_banner">
-        <section id="img_head">
-            <img src="img/hero.jpg">
-        </section>
-        <section id="head_text">   
-            <h2>Diseño y desarrollo web</h2>
-            <div id="location">
-                <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="84" height="84" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffbf00" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-                    <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-                  </svg></p>
-                <p>Sevilla, España</p>
-            </div>
-            <a href="#" class="button">Contactar</a>
-        </section>
-    </div>
+
     <main>
         <h2>Mis servicios</h2>
         <div class="servicios">
@@ -85,29 +89,29 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum animi cumque iusto porro. Rem minus quidem quia beatae provident eaque delectus!</p>
             </section>
         </div>
-        <section> 
+        <section class="contact"> 
             <h2>Contacto</h2>
             <form>
                 <fieldset>
                     <legend>Contactános llenando todos los campos</legend>
 
                     <div class="contenedor-campos">
-                        <div class="campo">
+                        <div id="campo1" class="campo">
                             <label>Nombre</label>
                             <input class="input-text" type="text" placeholder="Tu Nombre">
                         </div>
 
-                        <div class="campo">
+                        <div id="campo2" class="campo">
                             <label>Teléfono</label>
                             <input class="input-text" type="tel" placeholder="Tu Teléfono">
                         </div>
 
-                        <div class="campo">
+                        <div id="campo3" class="campo">
                             <label>Correo</label>
                             <input class="input-text" type="email" placeholder="Tu Email">
                         </div>
                 
-                        <div class="campo">
+                        <div id="campo4" class="campo">
                             <label>Mensaje</label>
                             <textarea class="input-text"></textarea>
                         </div>
