--- a/Interfaz/Tema 5 Practica/act2.html
+++ b/Interfaz/Tema 5 Practica/act2.html
@@ -11,14 +11,14 @@
     <form action="">
         Nombre del gasto: <input type="text" id="nameBill">
         Euros: <input type="text" id="prizeBill">
-        <button onclick="">Agregar Gasto</button>
+        <button onclick="addBill()">Agregar Gasto</button>
     </form>
 
     <h3>Lista de Gastos:</h3>
-    <ul id="bills">
+    <ul id="LBills">
         <!--Aquí se insertan los datos de los gastos-->
     </ul>
-    <p id="tBill">Total acumulado: </p>
+    <p id="tBill"></p>
     <script src="act2.js"></script>
 </body>
 </html>
