Update final de tema 5

--- a/Interfaz/Tema 5 Practica/act2.html
+++ b/Interfaz/Tema 5 Practica/act2.html
@@ -8,17 +8,17 @@
 <body>
     
     <h1>Calculadora de Gastos</h1>
-    <form action="">
+    <form>
         Nombre del gasto: <input type="text" id="nameBill">
         Euros: <input type="text" id="prizeBill">
-        <button onclick="addBill()">Agregar Gasto</button>
+        <button type=button onclick="addBill()">Agregar Gasto</button>
     </form>
 
     <h3>Lista de Gastos:</h3>
-    <ul id="LBills">
+    <ul id="bills">
         <!--Aquí se insertan los datos de los gastos-->
     </ul>
-    <p id="tBill"></p>
+    <p id="tBills"></p>
     <script src="act2.js"></script>
 </body>
 </html>
