--- a/Interfaz/practica5 SASS/fuente.html
+++ b/Interfaz/practica5 SASS/fuente.html
@@ -18,13 +18,11 @@
             </div>
         </div>
         <div class="nav row flex-column flex-md-row justify-content-md-between row-gap-3">
-            <div class="col"><a href="redes_sociales.html">Redes sociales</a></div>
-            <div class="col"><a href="paleta.html">Paleta de colores</a></div>
-            <div class="col"><a href="fuente.html">Carta de fuentes</a></div>
+            <div class="col"><a href="index.html">Inicio</a></div>
         </div>
     </header>
     <main>
-
+        
     </main>
     <footer class="text-center my-3">
         <div class="bg-light p-2">
