--- a/Interfaz/practica5 SASS/redes_sociales.html
+++ b/Interfaz/practica5 SASS/redes_sociales.html
@@ -88,7 +88,7 @@
     </main>
     <footer class="text-center my-3">
         <div class="bg-light p-2">
-            <p>Moisés Moreno Mendoza</p> <a href="#" class="text-dark">aqui va el enlace de git</a>
+            <p>Moisés Moreno Mendoza</p> <a href="https://github.com/mmm0129Medac/DAW2/tree/0b5bb2f65074d26ee0d3ba554a44a170645a19f6/Interfaz/practica5%20SASS" class="text-dark">aqui va el enlace de git</a>
             <p>30/10/2024</p>
         </div>
     </footer>
