--- a/Desarrollo Cliente/index.html
+++ b/Desarrollo Cliente/index.html
@@ -35,6 +35,15 @@
     <div class="row mt-4">
       <div class="col-lg-8 table-container">
         <h2>Listado de habitaciones</h2>
+        <select id="sort-criteria">
+          <option value="numero">Número de Habitación</option>
+          <option value="nombre">Nombre de la Habitación</option>
+          <option value="tipo">Tipo de Habitación</option>
+          <option value="precio">Precio por Noche</option>
+          <option value="fechaDisponibilidad">Fecha de Disponibilidad</option>
+          <option value="disponibilidad">Disponibilidad</option>
+        </select>
+      
         <!-- Tabla -->
         <table id="room-table" class="table table-striped table-bordered text-center align-middle">
           <thead class="thead-light">
@@ -69,9 +78,9 @@
           <div class="mb-3">
             <label for="room-type" class="form-label">Tipo de habitación:</label>
             <select name="room-type" id="room-type">
-              <option value="individual">Individual</option>
-              <option value="double">Doble</option>
-              <option value="suite">Suite</option>
+              <option value="Individual">Individual</option>
+              <option value="Doble">Doble</option>
+              <option value="Suite">Suite</option>
             </select>
           </div>
           <div class="mb-3">
